clean build created, hanged path for script in index.html in dist folder, updated webpack properties, updated index.js to import images & add images on load

--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,9 @@
   "description": "contact-card",
   "private": "true",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --mode development",
+    "dev": "webpack-dev-server",
+    "start": "webpack --watch"
   },
   "repository": {
     "type": "git",
