--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,8 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.0",
     "build": "^0.1.4",
     "npm": "^8.18.0",
     "run": "^1.4.0"
