--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.0",
     "build": "^0.1.4",
+    "idb": "^7.0.2",
     "npm": "^8.18.0",
     "run": "^1.4.0"
   }
