--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "contact-card",
   "private": "true",
   "scripts": {
-    "build": "webpack --mode development",
+    "build": "webpack --mode production",
     "dev": "webpack-dev-server",
     "start": "webpack --watch"
   },
